--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<div class="title">Distrito Films</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -96,7 +96,7 @@
 						<div class="title">Glamour</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -108,7 +108,7 @@
 						<div class="title">Botanical Escape</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -120,7 +120,7 @@
 						<div class="title">Pinpoint</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -132,7 +132,7 @@
 						<div class="title">One on One</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -144,7 +144,7 @@
 						<div class="title">Mobile App</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -156,7 +156,7 @@
 						<div class="title">Biosferia</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -168,7 +168,7 @@
 						<div class="title">The World Bar</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 		</div>
 	</div>
