--- a/page-works.html
+++ b/page-works.html
@@ -74,7 +74,7 @@
 						<div class="title">Distrito Films</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -86,7 +86,7 @@
 						<div class="title">Glamour</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -98,7 +98,7 @@
 						<div class="title">Botanical Escape</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -110,7 +110,7 @@
 						<div class="title">Pinpoint</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -122,7 +122,7 @@
 						<div class="title">One on One</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -134,7 +134,7 @@
 						<div class="title">Mobile App</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -146,7 +146,7 @@
 						<div class="title">Biosferia</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 
 			<!-- entry -->
@@ -158,7 +158,7 @@
 						<div class="title">The World Bar</div>
 					</div>
 				</div>
-				<a href="project.html"></a>
+				<a href="#"></a>
 			</div>
 		</div>
 	</div>
